<resources>
    <string name="app_name">SmartServices</string>
    <string name="nombre">Nombre</string>
    <string name="cedula">Cedula</string>
    <string name="num_identi">Numero de identificación</string>
    <string name="registrar">Registrar persona</string>
    <string name="autenticacion">Prueba de autenticacion</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrar_usuario">Registrar usuario</string>
    <string name="ciudad">Ciudad</string>
    <string name="barrio">Barrio</string>
    <string name="direccion">Dirección</string>
    <string name="telefono">Telefono</string>
    <string name="usuario">Usuario</string>
    <string name="cambios_info_personal">Cambiar datos personales</string>
    <string name="cambios">Realizar cambios</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="nueva_publicacion">Nueva publicación</string>
    <string name="admin_servicios">Administrar servicios</string>
    <string name="edit_datos_usu">Editar datos personales</string>
    <string name="servicios_solic">Servicios solicitados</string>
    <string name="buzon_preguntas">Buzón de preguntas</string>
    <string name="siguiente">Siguiente</string>
    <string name="info_basica"><u>Información basica</u></string>
    <string name="info_basica2">Información basica</string>
    <string name="precio">Precio</string>
    <string name="agregar_imagen">Agregar imagenes</string>
    <string name="servicios_destacados"><u>Servicios Destacados</u></string>
    <string name="detalles"><u>Detalles</u></string>
    <string name="detalles_serv">Detalles</string>
    <string name="que_incluye">¿Qué incluye?</string>
    <string name="que_no_incluye">¿Qué no incluye?</string>
    <string name="informacion_adicional">Información adicional</string>
    <string name="coloque_texto">Coloque aquí su texto...</string>
    <string name="preguntas">Preguntas</string>
    <string name="comentarios">Comentarios</string>
    <string name="solicitar_servicio">Solicitar servicio</string>
    <string name="agregar_favoritos">Agregar a favoritos</string>
    <string name="comentario_de">Comentario de:</string>
    <string name="incluye">Incluye</string>
    <string name="no_incluye">No incluye</string>
    <string name="buscador">Buscador</string>
    <string name="vas_solicitar">Vas a solicitar:</string>
    <string name="enviar_reserva">Enviar reserva</string>
    <string name="horas_disponibles">Horas disponibles</string>
    <string name="metodo_pago">Metodo de pago</string>
    <string name="filtro">Filtro</string>
    <string name="busqueda_avanzada"><u>Busqueda avanzada</u></string>
    <string name="cerca_mio">¿Qué tan lejos?</string>
    <string name="buscar">Buscar</string>
    <string name="precio_maximo">Precio máximo</string>
    <string name="km">Km</string>
    <string name="resultados_busqueda"><u>Resultados de la busqueda</u></string>
    <string name="direcciones">Direcciones</string>

    <string-array name="tipoServicio_nv1">
        <item>Seleccionar categoria</item>
        <item>Belleza</item>
        <item>Higiene personal</item>
        <item>Clases</item>
        <item>Fiestas y eventos</item>
        <item>Hogar</item>
        <item>Mantenimiento</item>
        <item>Salud</item>
        <item>Profesionales</item>
        <item>Reparaciones e instalaciones</item>
        <item>Ropa</item>
        <item>Mascotas</item>
        <item>Transporte</item>
        <item>Viajes</item>
        <item>Otros</item>
    </string-array>
    <string-array name="tipoServicio_nv2_1">
        <item>Centros esteticos</item>
        <item>Piercing y Tatuajes</item>
        <item>Cosmetologia</item>
        <item>Peluqueria</item>
    </string-array>
    <string-array name="method_pagos">
        <item>Seleccionar medio de pago</item>
        <item>Efectivo</item>
        <item>Tarjeta debito</item>
        <item>Tarjeta credito</item>
    </string-array>
    <string-array name="dias">
        <item>Seleccionar dia</item>
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miercoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
        <item>Sabado</item>
        <item>Domingo</item>
    </string-array>
    <string-array name="horas_dia">
        <item>Seleccionar hora</item>
        <item>7:00 am - 9:00 am</item>
        <item>9:00 am - 11:00 am</item>
        <item>11:00 am - 1:00 pm</item>
        <item>2:00 pm - 4:00 pm</item>
        <item>4:00 pm - 6:00 pm</item>
        <item>6:00 pm - 8:00 pm</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="button_calendario">Siguiente</string>
    <string name="checkBox_c_lunes">Lunes</string>
    <string name="checkBox_c_martes">Martes</string>
    <string name="checkBox_c_miercoles">Miercoles</string>
    <string name="checkBox_c_jueves">Jueves</string>
    <string name="checkBox_c_viernes">Viernes</string>
    <string name="checkBox_c_sabado">Sabado</string>
    <string name="checkBox_c_domingo">Domingo</string>
    <string name="checkBox_c_7a9">7:00 am - 9:00 am</string>
    <string name="checkBox_c_9a11">9:00 am - 11:00 am</string>
    <string name="checkBox_c_11a1">11:00 am - 1:00 pm</string>
    <string name="checkBox_c_2a4">2:00 pm - 4:00 pm</string>
    <string name="checkBox_c_4a6">4:00 pm - 6:00 pm</string>
    <string name="checkBox_c_6a8">6:00 pm - 8:00 pm</string>
    <string name="Text_c_disponibilidad"><u>Ubicación y disponibilidad</u></string>
    <string name="posicionamiento"><u>Posicionamiento</u></string>
    <string name="ya_est_s_a_punto_de_acabar">Ya estás a punto de acabar!</string>
    <string name="con_la_opci_n_de_posicionamiento_puedes_hacer_que_tus_publicaciones_salgan_como_destacadas_cuando_es_buscado_un_servicio_como_el_tuyo_es_decir_tu_servicio_se_mostrar_entre_los_primeros_deseas_activarlo_este_servicio_se_cobrar_mensualmente_a_trav_s_de_tu_tarjeta_de_cr_dito_por_un_monto_de_2_d_lares">Con la opción de posicionamiento puedes hacer que tus publicaciones salgan como destacadas cuando es buscado un servicio como el tuyo, es decir, tu servicio se mostrará entre los primeros. Deseas activarlo?(Este servicio se cobrará mensualmente a través de tu tarjeta de crédito por un monto de $2 dólares)</string>
    <string name="si_deseo_activar_el_posicionamiento">Si, deseo activar el posicionamiento</string>
    <string name="no_finalizar_publicaci_n">No, finalizar publicación</string>
    <string name="todo">TODO</string>

    <string name="textView_c_disponibilidad">Calendario de disponibilidad</string>
    <string name="correo">Correo</string>
    <string name="ubicaci_n_del_servicio"><u>Ubicación del servicio</u></string>
    <string name="tu_ranking"><u>Tu ranking</u></string>
    <string name="basado_en_la_opini_n_de_los_integrantes_de_nuestra_plataforma_tu_ranking_es">Basado en la opinión de los integrantes de nuestra plataforma tu ranking es:</string>
    <string name="como_prestador_de_servicios">Como prestador de servicios</string>
    <string name="como_contratador_de_servicios">Como contratador de servicios</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textView_Notificaciones"><u>Tus notificaciones</u></string>
    <string name="informaci_n_del_usuario"><u>Información del usuario</u></string>
    <string name="informaci_n_del_servicio"><u>Información del servicio</u></string>
    <string name="editar_datos_de_usuario"><u>Editar datos de usuario</u></string>
    <string name="categor_as"><u>Categorías</u></string>
    <string name="disponibilidad"><u>Disponibilidad</u></string>
    <string name="tus_servicios"><u>Tus Servicios</u></string>
    <string name="registro_de_usuario"><u>Registro de usuario</u></string>
    <string name="servicios_solicitados"><u>Servicios solicitados</u></string>
    <string name="infomaci_n_del_prestador">Información del prestador</string>>


</resources>
